--- a/index.html
+++ b/index.html
@@ -8,42 +8,81 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="app.js"></script>
-
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Movies Lab</a>
-      </div><!-- /.container-fluid -->
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Movie name" id="name">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Year" id="year">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </div>
     </div>
   </nav>
   <div class="container">
+    <!-- <div class="panel-group" id="accordion">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h1 class="panel-title">
+            <a href="#collapse" data-toggle="collapse" data-parent="#accordion">
+              Search
+            </a>
+          </h1>
+        </div>
+        <div id="collapse" class="panel-collapse collapse in">
+          <div class="panel-body">
+            <form role="form">
+              <div class="form-group">
+                <label for="name">Movie name</label>
+                <input type="text" name="somefield" class="form-control" id="name">
+              </div>
+              <div class="form-group">
+                <label for="name">Year</label>
+                <input type="text" name="somefield" class="form-control" id="year">
+              </div>
+              <button type="submit" class="btn btn-primary">Search</button>
+            </form>            
+          </div>
+        </div>
+      </div>
+    </div> -->
     <div class="row">
-      <form role="form">
-        <div class="form-group">
-          <label for="name">Movie name</label>
-          <input type="text" name="somefield" class="form-control" id="name">
-        </div>
-        <div class="checkbox">
-          <input type="checkbox" id="tomatoes">Tomatoes data
-        </div>
-        <div class="radio">
-          <label class="radio-inline">
-            <input name="plot" type="radio">Full plot
-          </label>
-        </div>
-        <div class="radio">
-          <label class="radio-inline">
-            <input name="plot" type="radio">Short plot
-          </label>
-        </div>
-        <button type="submit" class="btn btn-primary">Search</button>
-      </form>
-      <h1>Results</h1>
-      <section class="result"></section>  
+      <h1>Search Your Favorite Films</h1>
+      <div class="col-md-4">
+        <section>
+          <ul class="result"></ul>
+        </section>
+      </div>
+      <div class="col-md-8" id="poster"></div>
     </div>
   </div>
 </body>
 </html>
+
+
+<!-- 
+
+<div class="checkbox">
+  <input type="checkbox" id="tomatoes">Tomatoes data
+</div>
+<div class="radio">
+  <label class="radio-inline">
+  <input name="plot" type="radio" id="full-plot">Full plot
+  </label>
+</div>
+<div class="radio">
+  <label class="radio-inline">
+  <input name="plot" type="radio" id="short-plot">Short plot
+  </label>
+</div>
+
+ -->
